bat_3 - fortification building

--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -453,3 +453,13 @@ tb_drg_slave_fighter_4;Slave warrior guild;Guilde d'esclaves de guerre;;;;;;;;;;
 tb_drg_fighter;dragon center;Centre des dragons;;;;;;;;;;;;x
 ho_drg_incubator;egg incubator room;salle d'incubateur des oeux;;;;;;;;;;;;x
 ho_drg_incubator_desc;an incubator room is recommended to create a dragon egg. It greatly increase hatching chances;un incubateur est fortement recommendé pour la ponte d'oeux de dragon. Il peut fortement augmenter les chances d'éclosions.;;;;;;;;;;;;x
+fo_drg_guardian_01;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_guardian_02;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_guardian_03;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_guardian_04;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_guardian_05;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_guardian_06;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_guardian_07;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_guardian_08;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_guardian_09;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_guardian_10;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
