bat_3 - retinue building

--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -463,3 +463,6 @@ fo_drg_guardian_07;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
 fo_drg_guardian_08;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
 fo_drg_guardian_09;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
 fo_drg_guardian_10;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
+fo_drg_retinue_1;dragon guard;garde dragonique;;;;;;;;;;;;x
+fo_drg_retinue_2;dragon guard;garde dragonique;;;;;;;;;;;;x
+fo_drg_retinue_3;dragon guard;garde dragonique;;;;;;;;;;;;x
