bat_3 - heart building

--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -466,3 +466,6 @@ fo_drg_guardian_10;dragonic fortification;fortification draconnique;;;;;;;;;;;;x
 fo_drg_retinue_1;dragon guard;garde dragonique;;;;;;;;;;;;x
 fo_drg_retinue_2;dragon guard;garde dragonique;;;;;;;;;;;;x
 fo_drg_retinue_3;dragon guard;garde dragonique;;;;;;;;;;;;x
+fo_drg_heart_1;dragon throne;trone du dragon;;;;;;;;;;;;x
+fo_drg_heart_2;dragon throne;trone du dragon;;;;;;;;;;;;x
+fo_drg_heart_3;dragon throne;trone du dragon;;;;;;;;;;;;x
