bat_3 - military building

--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -469,3 +469,4 @@ fo_drg_retinue_3;dragon guard;garde dragonique;;;;;;;;;;;;x
 fo_drg_heart_1;dragon throne;trone du dragon;;;;;;;;;;;;x
 fo_drg_heart_2;dragon throne;trone du dragon;;;;;;;;;;;;x
 fo_drg_heart_3;dragon throne;trone du dragon;;;;;;;;;;;;x
+fo_drg_trainee;training field;terrains d'entrainement;;;;;;;;;;;;x
