--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -470,3 +470,11 @@ fo_drg_heart_1;dragon throne;trone du dragon;;;;;;;;;;;;x
 fo_drg_heart_2;dragon throne;trone du dragon;;;;;;;;;;;;x
 fo_drg_heart_3;dragon throne;trone du dragon;;;;;;;;;;;;x
 fo_drg_trainee;training field;terrains d'entrainement;;;;;;;;;;;;x
+fo_drg_academy_1;academy;académie;;;;;;;;;;;;x
+fo_drg_academy_2;academy;académie;;;;;;;;;;;;x
+fo_drg_academy_3;academy;académie;;;;;;;;;;;;x
+fo_drg_blue_final;blue academy;académie bleu;;;;;;;;;;;;x
+fo_drg_yellow_final;yellow academy;académie jaune;;;;;;;;;;;;x
+fo_drg_red_final;red academy;académie rouge;;;;;;;;;;;;x
+fo_drg_black_final;black academy;académie noire;;;;;;;;;;;;x
+fo_drg_white_final;white academy;académie blanche;;;;;;;;;;;;x
