--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -478,3 +478,6 @@ fo_drg_yellow_final;yellow academy;académie jaune;;;;;;;;;;;;x
 fo_drg_red_final;red academy;académie rouge;;;;;;;;;;;;x
 fo_drg_black_final;black academy;académie noire;;;;;;;;;;;;x
 fo_drg_white_final;white academy;académie blanche;;;;;;;;;;;;x
+fo_drg_pascific_1;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
+fo_drg_pascific_2;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
+fo_drg_pascific_3;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
