bat_3 - expension building

--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -481,3 +481,6 @@ fo_drg_white_final;white academy;académie blanche;;;;;;;;;;;;x
 fo_drg_pascific_1;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
 fo_drg_pascific_2;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
 fo_drg_pascific_3;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
+fo_drg_expension_1;influence sphere;sphère d'influence;;;;;;;;;;;;x
+fo_drg_expension_2;influence sphere;sphère d'influence;;;;;;;;;;;;x
+fo_drg_expension_3;influence sphere;sphère d'influence;;;;;;;;;;;;x
