--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -257,3 +257,7 @@ TT_ani_191_random_trait;§Y[From.GetFullName]§! gains a random horse rulership tr
 ## dragon update
 DESC_ani_204;Humans build complex buildings but cannot defend themself against us...;Les humains construisent des structures complexes, mais ne savent pas se défendre!;;;;;;;;;;;;x
 OPT_ani_204;I should make use of it!;Je devrais en profiter.;;;;;;;;;;;;x
+DESCA_ANI_206;[From.GetFullName] just hatched from its egg. [From.GetSheHeCap] seems in good health!;[From.GetFullName] viens tout juste de sortir de son oeuf. [From.GetSheHeCap] semble être en bonne santé!;;;;;;;;;;;;x
+DESCB_ANI_206;I am finnaly outside of my egg, I can now be a proud dragon!;Je suis enfin sorti de mon oeuf, je peux enfin être un vrai dragon!;;;;;;;;;;;;x
+OPTA_ANI_206;[From.GetSheHeCap] still need to leanr many things;[From.GetSheHeCap] a quand même besoin d'apprendre beaucoup de choses!;;;;;;;;;;;;x
+OPTB_ANI_206;I am destined for greatness!;Je serais le meilleur dragon!;;;;;;;;;;;;x
