--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -473,9 +473,6 @@ fo_drg_trainee;training field;terrains d'entrainement;;;;;;;;;;;;x
 fo_drg_academy_1;academy;académie;;;;;;;;;;;;x
 fo_drg_academy_2;academy;académie;;;;;;;;;;;;x
 fo_drg_academy_3;academy;académie;;;;;;;;;;;;x
-fo_drg_pascific_1;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
-fo_drg_pascific_2;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
-fo_drg_pascific_3;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
-fo_drg_expension_1;influence sphere;sphère d'influence;;;;;;;;;;;;x
-fo_drg_expension_2;influence sphere;sphère d'influence;;;;;;;;;;;;x
-fo_drg_expension_3;influence sphere;sphère d'influence;;;;;;;;;;;;x
+fo_drg_casus_belli_1;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
+fo_drg_casus_belli_2;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
+fo_drg_casus_belli_3;authority building;bâtiment de la souveraineté;;;;;;;;;;;;x
