cul_2.3 - update lay decision

--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -281,5 +281,5 @@ DESC_ANI_219;As an egg, their is a chance that I never hatch. It seems that my l
 OPT_ANI_219;If only my hospital could have saved me...;Si seulement l'hôpital aurait pu me sauver...;;;;;;;;;;;;x
 DESCA_ANI_220;I just heard that one of my eggs could not hatch...;Je viens juste d'apprendre que l'un de mes œufs ne pourra pas éclore...;;;;;;;;;;;;x
 DESCB_ANI_220;I just heard that one of my eggs could not hatch. I don't know why, but I should build something to make them healthier;Je viens juste d'apprendre que l'un de mes œufs ne pourra pas éclore. Si seulement j'avais pus construire un lieu pour en prendre un plus grand soin;;;;;;;;;;;;x 
-OPTA_ANI_220;A sad newsUne mauvaise nouvelle;;;;;;;;;;;;x
+OPTA_ANI_220;A sad news;Une mauvaise nouvelle;;;;;;;;;;;;x
 OPTB_ANI_220;I'll still keep it's egg;Je conserverai ces restes;;;;;;;;;;;;x
