--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -290,3 +290,6 @@ DESC_ANI_222;I put my dragon egg in my fort before returning to my castle. But s
 OPT_ANI_222;Why did we became dragon?!;Pourquoi cela nous a transformé en dragon?!;;;;;;;;;;;;x
 DESC_ANI_223;With the death of the previous dragon lord, I am tasked to rule over [Root.primary_title.GetFullName]. But as my sibling also want to take my place, I am forced to hold the famous succession tournament;suite à mon héritage de [Root.primary_title.Get_only_du_RealmFull] [Root.primary_title.GetFullName], mes frères et sœur dragon veulent tout de même ma position.;;;;;;;;;;;;x
 OPT_ANI_223;Let the death match start!;Je vais leur apprendre leur place en combat à mort;;;;;;;;;;;;x
+DESC_ANI_224;[Root.target_dragon_2nd_fighter.GetFullName] come into the field. [Root.target_dragon_2nd_fighter.GetSheHeCap] has been chosen as my next opponent in the fight to the throne;[Root.target_dragon_2nd_fighter.GetFullName] vient tout juste d'entrer dans l'arène. [Root.target_dragon_2nd_fighter.GetSheHeCap] est donc le prochain prétendant à mon titre!;;;;;;;;;;;;x
+OPTA_ANI_224;Why did [Root.target_dragon_2nd_fighter.GetSheHe] gave up?!;Pourquoi a-[Root.target_dragon_2nd_fighter.GetSheHe] abandonné?;;;;;;;;;;;;x
+OPTB_ANI_224;Let the duel start!;Que le duel commence!;;;;;;;;;;;;x
