--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -353,6 +353,8 @@ dragon_goes_battlefield;come into the battlefield;Intégrer le champs de bataille
 dragon_goes_battlefield_desc;By entering the battlefield, you can have some loyal dragon come with you;En entrant sur le champs de bataille, un certain nombre de dragon loyaux se joindront à toi;;;;;;;;;;;;x
 dragon_convert_to_tribal;Plunder the property;Piller la propriété;;;;;;;;;;;;x
 dragon_convert_to_tribal_desc;By plundering the whole property, you take everything with value and let the minimum living inside;En pillant la propriété, on prend tout ce qui a de la valeur. On laisse après que ce qui est nécessaire à la vie dans le comté;;;;;;;;;;;;x
+dragon_start_to_loot_tributary_province;Start integrating the province;Démarer l'intégration de la province;;;;;;;;;;;;x
+dragon_start_to_loot_tributary_province_desc;By creating an outpost, you can start influencing the province. With time, if the outpost is developped corretly, the province can be integrated.;En créant un avant-poste draconnique, il est possible d'influencer la province. Lorsque la province est suffisemment influencé, elle peut être absorbé dans un empire draconnique;;;;;;;;;;;;x
 
 TT_dragon_did_not_lay_egg_recently;Did not lay an egg recently;N'a pas pondu d'œuf récemment;;;;;;;;;;;;x
 TT_is_an_adult_dragon;Has finished its dragon education;A fini son éducation de dragon;;;;;;;;;;;;x
