gov_5.2 - county influence by  absorption

--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -295,3 +295,5 @@ OPTA_ANI_224;Why did [Root.target_dragon_2nd_fighter.GetSheHe] gave up?!;Pourquo
 OPTB_ANI_224;Let the duel start!;Que le duel commence!;;;;;;;;;;;;x
 DESC_ANI_225;The succession came to an end. Everyone who wanted my position did either renounce to it or die for it.;Cette succession s'est enfin terminé. Tous les prétendant sont soit mort, soit on abandonner leur revendications;;;;;;;;;;;;x
 OPT_ANI_225;Finnally!;Enfin!;;;;;;;;;;;;x
+DESC_ANI_230;With the growth of §Y[dragon_new_county_owner.GetTitledName]§! influence in §Y[This.GetName]§!, I lost my power as the lord...;Avec l'influence grandissante de §Y[dragon_new_county_owner.GetTitledName]§!, les habitants de §Y[This.GetName]§! ne m'écoutent plus.;;;;;;;;;;;;x
+OPT_ANI_230;Why did he have to usurp §Y[This.GetName]§!?;Pourquoi faut-il que §Y[dragon_new_county_owner.GetTitledName]§! me vole mes titres?!;;;;;;;;;;;;x
